...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:id="@+id/exoplayer_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.google.android.exoplayer2.ui.SimpleExoPlayerView>

        <ImageView
...
            android:src="@drawable/ic_play_button_24dp" />


    </FrameLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/fp_text_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/colorBackPlay"
        app:layout_constraintBottom_toTopOf="@+id/fp_navigation_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_one">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fc_recycler_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fp_head_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textAppearance="@style/TextHead"
                tools:text="HEADER" />

            <TextView
                android:id="@+id/fp_body_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:clickable="true">

            <ImageView
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="64dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:src="@drawable/ic_skip_prev_white_24dp" />
        </FrameLayout>

        <TextView
            android:id="@+id/navigation_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Step 1"
            android:textAppearance="@style/TextHead" />
...
            android:background="?android:selectableItemBackground"
            android:clickable="true"

            >

            <ImageView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="64dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="8dp"
...
