<resources>
    <string name="app_name">Baking App</string>

    <!--messages text-->
    <string name="ingredients_expand"> "expand ingredients"</string>
    <string name="ingredients_collapse"> "collapse"</string>
    <string name="ingredients_title"> "INGREDIENTS:"</string>
    <string name="play_header_step"> "Step %1$s"</string>
    <string name="play_header_intro"> "Intro"</string>
    <string name="play_header_error"> "No recipe"</string>
    <string name="play_body_text"> "Description: %1$s"</string>
    <string name="play_body_empty"> "No description"</string>
    <string name="play_header_empty"> "\u2014"</string>
    <string name="play_body_error"> "No or invalid data"</string>

    <!--<string name="regex_template">[^\x00-\xBE]</string>-->

    <!--tools text    -->
    <string name="tool_header">HEADER</string>
    <string name="tool_body">Normal text</string>
    <string name="tool_alpha">0.0</string>

    <!--widget-->
    <string name="empty_widget_head">Click to choose recipe</string>
    <string name="empty_widget_body"> </string>
    <string name="widget_head_text">Recipe Name</string>
    <string name="widget_body_text">Ingredients List</string>
    <string name="widget_button">Tap to fill widget</string>
    <string name="widget_add">Add widget</string>
    <string name="widget_list_added">List of ingredients added to widget</string>

    <!--dialog-->
    <string name="error_title">Error connecton</string>
    <string name="empty_title">The database of recipes is empty</string>
    <string name="message_error">Error connection! Local data used. </string>
    <string name="message_close">Please close program! </string>
    <string name="message_error_line1">There is no connection to the Internet</string>
    <string name="message_error_line2">Please retry or exit from the program</string>
    <string name="message_error_line3"> </string>
    <string name="message_error_line4">Please restart program to load recipes</string>

    <string name="error_retry">RETRY</string>
    <string name="error_close">CLOSE</string>
    <string name="error_exit">EXIT</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <!--menu-->

    <string name="menu_settings">Settings</string>
    <!--preference-->
    <string name="pref_load_images_on">Load preview enabled</string>
    <string name="pref_load_images_off">Load preview disabled</string>
    <string name="pref_load_images_key">pref_load_images_key</string>
    <string name="pref_load_images_label">Load preview images</string>

    <string name="pref_reload_recipes_on">Reload recipes always</string>
    <string name="pref_reload_recipes_off">Reload recipes one per 24hr</string>
    <string name="pref_reload_recipes_key">pref_load_recipes_key</string>
    <string name="pref_reload_recipes_label">Reload recipes every start</string>

    <string name="pref_show_warnings_on">Show connection warning enabled</string>
    <string name="pref_show_warnings_off">Show connection warning disabled</string>
    <string name="pref_show_warnings_key">pref_show_warning_key</string>
    <string name="pref_show_warnings_label">Show warnings</string>

    <string name="pref_reload_time_key">pref_load_time_key</string>
    <string name="pref_reload_delay_key">pref_load_delay_key</string>

    <!--test-->
    <string name="test_message_error">Recipe database is empty, connect device
 to the Internet, run application to load data, then run test</string>
    <string name="test_message_recipe">Recipe data empty</string>
    <string name="test_message_steps">Recipe Steps data empty</string>
    <string name="test_message_ingredients">Recipe ingredients data empty</string>
    <string name="test_message_portrait">This test for Portrait Mode Only</string>
    <string name="test_message_landscape">This test for Landscape Mode Only</string>

</resources>

